assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Ovo&family=Quattrocento+Sans&display=swap');

/* -- Global Styles -- */

/* Set values used throughout the site as variables to allow for easy alteration */
:root {
  --wild-sand: rgb(244, 245, 247);
  --blue: rgb(102, 190, 234);
  --light-purple: rgb(189, 187, 250);
  --orange: rgb(249, 133, 48);
}

/* Configure universal box-sizing to make box model layout calculations easier */
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

/* Remove default margin and padding for every element on the page to keep
spacing consistent across browsers */
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Quattrocento Sans', sans-serif;
}

h1,
h2,
h3 {
  font-family: 'Ovo', serif;
}

/* Major third type scale (from type-scale.com/) - largest size unused for
mobile screens */
h1 {
  font-size: 2.441rem;
}

h2 {
  font-size: 1.953rem;
}

h3 {
  font-size: 1.563rem;
}

/* Applies a background colour to only the sections of the page whose index is
an even, producing and alternating colour scheme */
section:nth-of-type(odd) {
  background-color: var(--blue);
}

/* Padding that will apply to all section elements */
section {
  padding: 25px 5%;
}

/* -- Multiple use classes -- */

.section-heading {
  margin-bottom: 50px;
  text-align: center;
}

/* -- Standard buttons -- */

.std-btn {
  font-family: 'Quattrocento Sans', sans-serif;
  font-size: 1.2em;
  font-weight: bold;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  padding: 12px 24px;
  border: 1px solid #b3822e;
  border-radius: 10px;
  background: #ffba42;
  background: -webkit-gradient(linear, left top, left bottom, from(#ffba42), to(#fe750d));
  background: -moz-linear-gradient(top, #ffba42, #fe750d);
  background: linear-gradient(to bottom, #ffba42, #fe750d);
  color: #000000;
  text-decoration: none;
  cursor: pointer;
}

.std-btn:hover,
.std-btn:focus {
  border: 1px solid #ffba42;
  background: #ffdf4f;
  background: -webkit-gradient(linear, left top, left bottom, from(#ffdf4f), to(#ff8c10));
  background: -moz-linear-gradient(top, #ffdf4f, #ff8c10);
  background: linear-gradient(to bottom, #ffdf4f, #ff8c10);
  color: #000000;
  text-decoration: none;
}

.std-btn:active {
  background: #997028;
  background: -webkit-gradient(linear, left top, left bottom, from(#997028), to(#fe750d));
  background: -moz-linear-gradient(top, #997028, #fe750d);
  background: linear-gradient(to bottom, #997028, #fe750d);
}

/* -- Header - Logo and Navigation -- */

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  width: 100%;
  padding: 15px 0;
  border-bottom: 1px solid black;
}

.logo {
  display: flex;
  align-items: center;
  gap: 5px;
  height: 100px;
  text-align: center;
  user-select: none;
  text-decoration: none;
  color: black;
}

.logo-img {
  height: 90%;
}

.logo-heading {
  font-family: 'Ovo', serif;
  font-size: 30px;
  font-weight: bolder;
  padding-top: 2px;
  border-top: 2px solid black;
  border-bottom: 2px solid black;
}

#navigation-container ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  list-style-type: none;
}

#navigation-container a {
  text-decoration: none;
  color: black;
}

#navigation-container a:hover {
  border-bottom: 2px solid black;
}

/* -- Hero section -- */

#hero-section {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 40px
}

#hero-img-container {
  display: none;
}

#hero-container {
  text-align: center;
}

/* Add padding to all children of the hero section except the last */
#hero-container :not(:last-child) {
  margin-bottom: 40px;
}


.hero-paragraph {
  font-size: 1.3rem;
}

/* -- Section separation - wave (svg) -- */

#wave {
  transform: rotate(180deg);
  margin-top: -1px;
}

/* -- Services section -- */

#services-section {
  text-align: center;
}

#services-container {
  display: flex;
  flex-wrap: wrap;
  gap: 50px;
  justify-content: center;
  margin-bottom: 50px;
}

.service-item {
  text-align: center;
  flex-basis: 250px;
}

.service-item :not(:last-child) {
  margin-bottom: 20px;
}

.service-item-img {
  max-height: 100px;
}

/* -- Team and Testimonial section -- */

.team-container {
  display: flex;
  flex-wrap: wrap;
  gap: 45px;
  justify-content: center;
}

.team-item {
  flex-basis: 300px;
  background-color: var(--wild-sand);
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0px 0px 6px 6px rgba(32, 32, 32, 0.4);
}

.team-item-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
  text-align: center;
  padding: 20px;
}

.team-item-content-image {
  height: 100px;
  width: 100px;
  border-radius: 50%;
  margin-bottom: 20px;
}

.team-item-content-name {
  font-weight: bold;
}

.team-item-content-role {
  font-style: italic;
}

.team-item-content-intro {
  margin-top: 20px;
}

.team-item-socials {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-top: 20px;
  padding: 20px;
  background-color: var(--orange);
}

.team-item-socials a {
  font-size: 1.2em;
  color: white;
  transition: transform 0.1s;
}

.team-item-socials a:hover {
  transform: scale(1.2, 1.2);
  color: black;
}

/* -- Pricing section -- */

#pricing-section {
  text-align: center;
}

#pricing-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 50px;
  margin-bottom: 50px;
}

.pricing-item {
  width: 300px;
  text-align: center;
  overflow: hidden;
  border-radius: 10px;
  border: 1px solid black;
  box-shadow:
    2px 4px 4px rgba(32, 32, 32, 0.22),
    3px 6px 6px rgba(32, 32, 32, 0.22),
    4px 8px 8px rgba(32, 32, 32, 0.22);
}

.pricing-item-heading {
  border-bottom: 1px solid black;
  background-color: var(--light-purple);
}

.pricing-item-heading-title,
.pricing-item-heading-cost {
  display: block;
  padding-top: 20px;
  font-size: 1.563rem;
}

.pricing-item-heading-cost {
  padding-bottom: 20px;
}

/* Pricing item emphasis - placed on promoted package */
.pricing-item-emphasis span {
  font-size: 1.8rem;
  font-weight: bold;
}

.pricing-item-emphasis .pricing-item-heading {
  background-color: var(--orange);
}

.pricing-item-emphasis {
  box-shadow: 2px 4px 4px rgba(32, 32, 32, 0.4),
    3px 6px 6px rgba(32, 32, 32, 0.4),
    4px 8px 8px rgba(32, 32, 32, 0.4);
}

.pricing-item-details {
  padding: 20px;
}

.pricing-item-details li {
  list-style-type: none;
  padding: 5px;
  line-height: 1.6em;
}

.pricing-item-details :not(:last-child) {
  border-bottom: 1px solid rgba(57, 57, 57, 0.2);
}

/* Contact section */

#contact-container form {
  display: flex;
  flex-direction: column;
  margin: 0 10%;
}

#contact-container form label {
  font-size: 1.1rem;
}

#contact-container form label:not(:first-of-type) {
  margin-top: 20px;
}

#contact-container form select {
  font-family: 'Quattrocento Sans', sans-serif;
  font-size: 1em;
  padding: 5px;
  border-radius: none;
  background-color: none;
  border: 1px solid black;
  cursor: pointer;
}

#contact-container form textarea {
  resize: none;
  margin-bottom: 20px;
}

#contact-container form input,
#contact-container form textarea {
  border: 1px solid black;
  padding: 5px;
  font-size: 1rem;
}

#contact-container form input:focus,
#contact-container form textarea:focus,
#contact-container form select:focus {
  outline: none;
  box-shadow: 0 0 0 2px var(--orange);
}

#contact-container form button {
  align-self: center;
}

/* Modal window */

.modal-window {
  position: fixed;
  background-color: rgba(255, 255, 255, 0.25);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 100;
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
  transition: all 0.3s;
}

.modal-window>div {
  text-align: center;
  width: 350px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 30px;
  background: white;
  border-radius: 10px;
  border: 1px solid black;
}

.modal-window:target {
  visibility: visible;
  opacity: 1;
  pointer-events: auto;
}

.modal-window header {
  font-weight: bold;
}

.modal-window :not(:last-child) {
  margin: 0 0 20px;
}

/* Footer */

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
  width: 100%;
  padding: 15px;
  border-top: 1px solid black;
  user-select: none;
}

.footer-logo {
  height: auto;
}

.footer-logo img {
  height: 53.33px;
}

.footer-logo span {
  font-size: 15px;
}

#footer-socials {
  padding: 10px;
}

#footer-socials a {
  font-size: 25px;
  color: black;
  text-decoration: none;
  padding: 0 5px;
}

/* Video section */

/* Push footer to bottom of viewport */
#video-section {
  min-height: calc(100vh - 325px);
}

#video-content {
  max-width: 560px;
  max-height: 350px;
  margin: 0 auto;
  text-align: center;
}

#video-content iframe {
  padding-bottom: 50px;
}

.embedtool {
  position: relative;
  height: 0;
  padding-top: 56%;
  overflow: hidden;
  max-width: 100%;
}

.embedtool iframe,
.embedtool object,
.embedtool embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.embedtool .fluid-vids {
  position: initial !important
}

/* -- Media queries -- */

/* Medium devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {

  /* Major third type scale (from type-scale.com/) - largest size used for
  larger screens */
  h1 {
    font-size: 3.052rem;
  }

  h2 {
    font-size: 2.441rem;
  }

  h3 {
    font-size: 1.953rem;
  }

  /* Increase to base paragraph size to give impact */
  p,
  li {
    font-size: 1.2rem;
  }

  /* Change layout of header to suit larger screens */
  header {
    flex-direction: row;
    justify-content: space-between;
    padding: 20px 10%;
  }

  /* Increase section padding */
  section {
    padding: 6vh 10%;
  }

  .hero-paragraph {
    font-size: 1.4rem;
  }

  #contact-container form label {
    font-size: 1.2rem;
  }

  footer {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 5px;
    padding: 15px 10%;
  }

  #footer-socials {
    order: 1;
  }

  /* Push footer to bottom of viewport */
  #video-section {
    min-height: calc(100vh - 226px);
  }
}

/* Large devices (desktops, 992px and up) */
@media screen and (min-width: 992px) {

  html {
    scroll-behavior: smooth;
  }

  /* Change layout of pricing grid to display in row */
  #pricing-container {
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .pricing-item {
    flex-basis: 300px;
  }

  /* Hero img show on larger screens */
  #hero-img-container {
    position: relative;
    display: block;
    min-width: 380px;
    height: 500px;
  }

  .hero-img-bg {
    position: absolute;
    width: 500px;
    left: -70px;
  }

  .hero-img-fg {
    width: 230px;
    position: absolute;
    bottom: 25%;
    right: 20%;
    transform: rotate(5deg);
    animation: hero-img-fade 3s forwards;
  }

  @keyframes hero-img-fade {
    from {
      opacity: 0%;
    }

    to {
      opacity: 100%;
    }
  }
}

@media (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: none;
  }
}

